Deleted the list-style-type that I added as I noticed that it had already been there with another class that I overlooked. I consolidated the .search-engine-optimization, .online-reputation-management, and .social-media-marketing classes in style.css as they all had the same properties. I am working on solving the benefits class in the aside tag as it has shifted on the website. I am working with flex to correct the positioning on the website.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,17 +32,13 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.navigation div ul li {
+.header nav li {
     display: inline-block;
     margin-left: 25px;
-}
-
-ul {
-    list-style-type: none;
 }
 
 a {
@@ -82,8 +78,9 @@ p {
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
-    float: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -138,25 +135,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
